# curator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Cargo.toml  README.md  SECURITY.md  curator-cli.nuspec
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  publish.yml  quality.yml  security.yml  version-bump.yml
snap/: snapcraft.yaml
src/: conduct.rs  config.rs  lib.rs  license.rs  main.rs  misc.rs  project.rs  tools.rs
templates/: citizen.md  covenant.md
templates/conduct/: django.md
templates/project/cpp/headers/: main.h
templates/project/cpp/src/: main.cpp
tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
