[package]
name = "curator"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "cu"
path = "src/main.rs"

[dependencies]
once_cell = "1.18"
crossterm = "0.29.0"
serde_json = "1.0"
dialoguer = "0.11"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["clock"], default-features = false }
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"
