[package]
name = "curator_cli"
description = "A versatile CLI tool for project management"
version = "0.3.5"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Saturnyx/curator"
repository = "https://github.com/Saturnyx/curator"
readme = "README.md"
rust-version = "1.88.0"
authors = ["Harshal <saturnyx@disroot.org>"]
keywords = ["repo", "management", "cli", "repository", "cu"]
categories = ["command-line-utilities"]


[[bin]]
name = "cu"
path = "src/main.rs"

[dependencies]
once_cell = "1.18"
crossterm = "0.29.0"
serde_json = "1.0"
dialoguer = "0.11"
fuzzy-matcher = "0.3"
slab = "0.4.11"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["clock"], default-features = false }
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"
